assets/css/style.css
#header {
    position: relative;
    background-color: #4abdac;
    border-bottom: 1px solid black;
}

body,html {
    /*min-width: 635px;*/
}

#brand {
    font-size: 40px;
}

#mainHeading {
    display: inline-block;
    margin: 0;
    color: #22252a;
    font-size: 32px;
    vertical-align: top;
    margin: 3px 0 0 5px;
}

.logo {
    display: flex;
}

.search {
    flex: auto;
    display: flex;
    justify-content: center;
}

#searchForm {
    display: inline-block;
    top: 15px;
    position: relative;
}

#searchIcon {
    float: right;
    margin-right: 10px;
    
    position: relative;
    z-index: 2;
    color: red;
}

#searchBar {
    display: inline-block;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
    text-align: right;
    padding-bottom: 0;
    padding-top: 0;
    outline: 0;

}

#searchButton {

    display: inline-block;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    padding-bottom: 0;
    padding-top: 0;

}

#profileIcon {
    font-size: 30px;
    margin: 10px 0;
}

.hide {
    display: none;
}

.btn-danger {
   color: #fff;
   background-color: #dc3545;
   border-color: #dc3545;
   margin: 10px 0 0 10px;
}

#mainLanding {
    margin: 20px 0;
}

body {
    padding-top: var(--ht);
    
}

.row {
    margin-bottom: 4em;
}

.rating-stars ul>li.star {
    display: inline-block;
    font-size: 3em;
}


.hover {
    color: #FFCC36;
}

.selected {
    color: #FF912C;
}

h1 {
    padding-bottom: .5em;
}

#artistPicDiv {
    text-align: center;
    padding: 1em;
}

#artistBioDiv {
    text-align: center;
    padding: 1em;
}

.card-header {
    text-align: center;
}

.similarArtist {
    cursor: pointer;
}

.similarArtist:hover {
    text-decoration: underline;
}

